fix: resume drive link &  add exp

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     Web developer / Open sourcer / Tireless Traveller
                 </p>
 
-                <a class="btn btn-outline-dark" href="https://drive.google.com/file/d/1SUXq80g0B-6HFBGxJXWSchlWmuxeNO8I/view?usp=sharing" target="_blank">Resume</a>
+                <a class="btn btn-outline-dark" href="https://drive.google.com/file/d/1ACbaU1SdYI2uYq1Qp2uz3TB8ix1_JH1e/view?usp=sharing" target="_blank">Resume</a>
 
             </div>
 
@@ -92,6 +92,17 @@
 
 
                 <div class="timeline">
+                    <div class="container-time right">
+                        <div class="content">
+                            <h2>Open source Contributor</h2>
+                            <h4>Terasology, GitHub</h4>
+                            <p>Worked on React and Gatsby to optimize image and manage matter.
+                              Developed auto OS selecting on ModuleSiteFixed existing UIrelated bugs and Improved UI for ModuleSite.
+                              Refactored CSS.Explored the blog search system and drilled inside it to improve blog search. 
+                              Explored Jenkins Module Generation Pipeline which generate Module from Github Module repository</p>
+                        </div>
+                    </div> 
+                   
                     <div class="container-time left">
                         <div class="content">
                             <h2>Intern
@@ -114,7 +125,7 @@
                                 modern and increase usability.
                                 Created a issue reporting tool to report bugs
                                 while using the app.
-                                Fixed and refactored code fortest-bench, a
+                                Fixed and refactored code for test-bench, a
                                 back-end tool to test circuits using code which
                                 was not maintained for over months.
                                 Fixed existing UI bugs that existed throughout
@@ -133,7 +144,7 @@
                                 competitions and group discussions.
                                 Organized the first-ever Web Development
                                 Workshop in the institute.
-                                Increased volunteerretention by 20workshops over
+                                Increased volunteerretention by 20 workshops over
                                 a span of 10 days.</p>
                         </div>
                     </div>
@@ -179,7 +190,7 @@
                                 <img src="images/maze.png" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Maze Generator</h5>
-                                    <p class="card-text">Implemented an one dimensional grid using js and instead ofrectangle created lines to use maze generator algorithm i.e. Randomized depth-first search</p>
+                                    <p class="card-text">Implemented an one dimensional grid using js and instead of rectangle created lines to use maze generator algorithm i.e. Randomized depth-first search</p>
                                 </div>
                                 <div class="card-footer shadow bg-dark">
                                     <small class="text-muted"> <a class="text-white fs-5" href="https://github.com/ryuk156/Maze-Generator-using-js-dsf">Github</a></small>
