--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                 <div class="timeline">
                     <div class="container-time right">
                         <div class="content">
-                            <h2>Open source Contributor</h2>
-                            <h4>Terasology, GitHub</h4>
+                            <h2>Google Summer of Code</h2>
+                            <h4>The Terasology Foundation, Remote</h4>
                             <p>Worked on React and Gatsby to optimize image and manage matter.
                               Developed auto OS selecting on ModuleSiteFixed existing UIrelated bugs and Improved UI for ModuleSite.
                               Refactored CSS.Explored the blog search system and drilled inside it to improve blog search. 
